Fix spacing of sign out button and user info

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -29,6 +29,7 @@ body {
   display: flex;
   flex-direction: column;
   font-size: 1.5em;
+  margin-left: 47%;
 }
 
 .user-info {
